# chrome2moz

./: .gitignore  API_MAPPINGS.md  ARCHITECTURE.md  AST_TRANSFORMER_PLAN.md  CHROME_ONLY_API_CONVERSION_PLAN.md  CHROME_ONLY_API_IMPLEMENTATION_STATUS.md  COMMIT_MESSAGE.txt  Cargo.toml  IMPLEMENTATION_GUIDE.md  PROJECT_SUMMARY.md  README.md  REMOVED_FEATURES.md  build-wasm.sh  chrome_only_apis.json
.cargo/: config.toml
.github/scripts/: update-stats.sh
.github/workflows/: deploy.yml  update-api-stats.yml
docs/: KEYBOARD_SHORTCUTS.md
scripts/: README.md  fetch_chrome_only_apis.py
src/: lib.rs  main.rs  wasm.rs
src/analyzer/: api.rs  declarative_content.rs  keyboard_shortcuts.rs  manifest.rs  mod.rs  offscreen.rs
src/cli/: interactive.rs  mod.rs
src/models/: chrome_api_data.rs  chrome_only.rs  conversion.rs  extension.rs  incompatibility.rs  manifest.rs  mod.rs
src/packager/: builder.rs  extractor.rs  mod.rs
src/parser/: javascript.rs  manifest.rs  mod.rs
src/report/: generator.rs  mod.rs
src/scripts/: check_keyboard_shortcuts.rs  fetch_chrome_only_apis.rs  generate_shortcut_data.rs  mod.rs
src/transformer/: chrome_only_converter.rs  declarative_content_converter.rs  javascript.rs  manifest.rs  mod.rs  offscreen_converter.rs  shims.rs  tab_groups.rs
src/transformer/ast/: callback.rs  codegen.rs  execute_script.rs  execute_script_advanced.rs.bak  mod.rs  module_detector.rs  parser.rs  polyfill.rs  scope.rs  visitor.rs
src/utils/: helpers.rs  mod.rs  url_replacer.rs
src/validator/: mod.rs  structure.rs
tests/: ast_comprehensive.rs  ast_transformer_phase1.rs  ast_transformer_phase2.rs  chrome_only_api_tests.rs  execute_script_fix.rs  execute_script_messaging.rs  integration_tests.rs
web/: README.md  app.js  index.html  styles.css
