[package]
name = "chrome-to-firefox"
version = "0.1.0"
edition = "2021"
authors = ["Chrome-to-Firefox Contributors"]
description = "Convert Chrome MV3 extensions to Firefox-compatible MV3"
license = "MIT"
repository = "https://github.com/OtsoBear/chrome-to-firefox"

[[bin]]
name = "chrome-to-firefox"
path = "src/main.rs"

[lib]
name = "chrome_to_firefox"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json5 = "0.4"

# File handling
zip = "0.6"
walkdir = "2.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Pattern matching
regex = "1.10"
lazy_static = "1.4"

# CLI
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.11"
colored = "2.1"
indicatif = "0.17"

# JavaScript parsing (using regex for simplicity - can upgrade to full AST later)
# swc_ecma_parser = "0.147"
# swc_common = "0.36"
# swc_ecma_ast = "0.118"
# swc_ecma_visit = "0.104"
# swc_ecma_codegen = "0.155"

# String manipulation
Inflector = "0.11"

# Networking
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3"

[dev-dependencies]
tempfile = "3.8"
pretty_assertions = "1.4"
test-case = "3.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1