[package]
name = "chrome-to-firefox"
version = "0.1.0"
edition = "2021"
authors = ["Chrome-to-Firefox Contributors"]
description = "Convert Chrome MV3 extensions to Firefox-compatible MV3"
license = "MIT"
repository = "https://github.com/OtsoBear/chrome-to-firefox"

[[bin]]
name = "chrome-to-firefox"
path = "src/main.rs"

[lib]
name = "chrome_to_firefox"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Serialization (pinned for SWC compatibility)
serde = { version = "=1.0.210", features = ["derive"] }
serde_json = "1.0"
json5 = "0.4"

# File handling
zip = "0.6"
walkdir = "2.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Pattern matching
regex = "1.10"
lazy_static = "1.4"

# CLI
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.11"
colored = "2.1"
indicatif = "0.17"

# AST-based JavaScript/TypeScript parsing (optional, enabled with ast-transformer feature)

# String manipulation
Inflector = "0.11"

# Networking
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3"

# AST transformer dependencies (now default - only transformer)
swc_core = { version = "0.90", features = [
    "ecma_parser",
    "ecma_transforms",
    "ecma_transforms_typescript",
    "ecma_codegen",
    "ecma_visit",
    "ecma_ast",
    "common"
] }

[dev-dependencies]
tempfile = "3.8"
pretty_assertions = "1.4"
test-case = "3.3"

# No features needed - AST is now the only transformer
[features]
default = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1